Fix issue of mail logo growing too big on chrome big screen

--- a/newsletters.css
+++ b/newsletters.css
@@ -230,7 +230,7 @@ button:hover {
 }
 
 .newsletter-img {
-  height: 100%;
+  height: 200px;
 }
 @media screen and (max-width: 830px) {
   .newsletter-img {
